# os_labs

./: .gitignore  CMakeLists.txt  archive_handler.c  archive_handler.h  argument_parser.c  argument_parser.h  extract_handler.c  extract_handler.h  helpers.c  helpers.h  main.c
example/root/: 2.txt
example/root/fold1/: fold_1_file1
example/root/fold1/sub_fold2/: sub_fold2_file
example/root/fold2/: fold_2_file
linux_lab_1_ar/: Makefile  archive_handler.c  argument_parser.c  extract_handler.h  helpers.h
linux_lab_1_ar/example/root/: 1.txt
linux_lab_1_ar/example/root/fold1/: fold1_file2
linux_lab_2_bash/: CMakeLists.txt  Makefile  helpers.c  helpers.h  list.c  list.h  main.c
linux_lab_3_coder/: CMakeLists.txt
linux_lab_3_coder/coder/: coder.c
linux_lab_3_coder/reader/: reader.c
linux_lab_4_sobel/: CMakeLists.txt  Makefile  main.c
linux_lab_4_sobel/helpers/: argument_parser.c  argument_parser.h  jpeg_helper.c  jpeg_helper.h
linux_lab_5_shower/Linux.Lab.5.Shower/: Bathroom.cs  Gender.cs  Linux.Lab.5.Shower.csproj  Linux.Lab.5.Shower.sln  Person.cs  Program.cs
linux_lab_5_shower/Linux.Lab.5.Shower.Monitors/: Linux.Lab.5.Shower.Monitors.csproj
linux_lab_5_shower/Linux.Lab.5.Shower.Semaphores/: Gender.cs  Linux.Lab.5.Shower.Semaphores.csproj  Men.cs  Person.cs  Program.cs
linux_lab_5_shower/Linux.Lab.5.Shower/Linux.Lab.5.Shower.Monitors/: Program.cs
linux_lab_5_shower/Linux.Lab.5.Shower/Linux.Lab.5.Shower.Semaphores/: Men.cs  Program.cs  Women.cs
